--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Elgato -</title>
+    <title>Volkswagen - Das auto</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Noto+Sans+Display:ital,wght@0,400;0,500;0,600;1,300;1,400;1,500;1,600&family=Outfit:wght@100;200;400;700&family=Playpen+Sans:wght@100;400;700&family=Raleway:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Tilt+Neon&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
@@ -41,7 +41,7 @@
         </div>
       </section>
       <section id="mostSell">
-        <h2>Más vendidos</h2>
+        <h2>Nuestras estrellas</h2>
         <div id="mas-vendidos">
           <div class="most-sold">
             <img src="./img/vw-gol-le.jpg" alt="Volkswagen Gol Last Edition" />
@@ -77,22 +77,31 @@
       </section>
       <section id="tematica">
         <!-- PLACEHOLDERS -->
-        <h2>Lo nuevo de Volkswagen</h2>
+        <h2>Nuestra comunidad</h2>
         <div id="grilla">
           <div class="item1">
-            <h3>Volkswagen ID.2all</h3>
+            <img
+              src="https://www.wsupercars.com/wallpapers-wide/Volkswagen/2022-Volkswagen-Golf-R-005-1440w.jpg"
+              alt="" />
           </div>
           <div class="item2">
-            <p>a</p>
+            <img
+              src="https://lh3.googleusercontent.com/pw/ADCreHc_odY6wdiJXCNhysHN9tSTC0aS70fLTysCQzHlT54gMlrowEuJ0A-HPDO4_mQSAop_UbJbtBe8P0HWngZ7skkW9IH5CB8Ckea_UFN-yTaPOlOha1t7sk2Mq66IbDxxElyWfGNcI6pvUIbydd7fgyCL2g=w544-h971-s-no-gm?authuser=0"
+              alt="Foto del interio de un auto Volkswagen. Vista desde asiento del conductor incluye volante, una calle con arboles y parte del tablero del vehiculo" />
           </div>
           <div class="item3">
-            <p>a</p>
+            <img
+              src="https://lh3.googleusercontent.com/pw/ADCreHdpXfHT2RJZPsaN5YtbZTFjiyekpKgHjgzpCMJmbGT1W4F5zuoyKJU5TOgQY9kXKowHRRUqvKP4TMSSjoaXYIeY178dCGvVq0U4J7HCGRD5_Ct035tHqm2mZ5yfwdLYHf6JldlRV01fLLmI17ND29Z_CUQWlV2GrIjU773XSIjnZz72H7KSMKRPs9rNvACst9DpmJ4AGbvuA5x-y9DTmoLcCeMckdXlad32Gu6bYm8uLdlmWa-yspaFDkw5PYwcBrR2CTCVd4N6H_77sCfEsRz04Tdslyvx1GacMV40DiIvePyuce-I9bCsdoavUaXWH-Es8-fpVAXmNgcuTjKlopeZF6qWC1jhciMliPXaEgT6i3Am_6Cr9MfN9fo-G0y5Q8R0E-RfVhkeQu0WcVIt4cTpX04ccvPDozBsleImYV5KzBgcouEnfQ45x6rlCtB5Y3igsw4vxROieg81Y5dLh_borcfXpVPO2m5RcF5opaKveBRkxFYdZ6kXFYRGj9dDeAfp2cLnNKQoU7xgKow5JaNMUSEjUNj3qTX_KkjsazKK2OkBDw0M8tjK2ffOhm_sjIjf36qAnwnaltGZaOqNWMeLPeFusGq9oNFvmznALwGrSDHMLNXndztz_Me1qCeavD6dELg14G8YTCzZbfGd1D49SG7jiGeo2NiSWSvmLaQW32qP6EKTri0pwPHK_gK0ClWw9L9ACQEd3aOWMiVHh6rnZOfw1OdR_l5tZPtrcGq3RJ5IKkkWImoUM0R5b-W6tNylJDIdZEg_D_Nt0fr-fccTHmzRP5jEgY-CAuQS8mMy77uJkWb0a4SaORnrm7tYBL3VMOuokNGybtBUVYdkZ-A82JCXDxFvqn3fZ9o-wzo4Czo9B44pMNpP5v7IYm2EQ43JdK2Nx5_nbquXAzEI6yk4eKg=w1295-h971-s-no-gm?authuser=0"
+              alt="" />
           </div>
           <div class="item4">
-            <p>a</p>
+            <img
+              id="vwgol"
+              src="https://lh3.googleusercontent.com/pw/ADCreHdfmUmQXRgaBVbed1JVioJCk0HafkQcP_XsiDrhyOuyvxGg1ZUV5fOIxOKSA-07JzCiuErMyjKAk0LijXDNQZfB7Y4sZS1dFUYeQBRH1_PWi5gYHvQlsFJEw5BzDbQTYmWqP9x_4seqCjp6CUhAyDSJ2Q0KZqQoKZXc72GF9BTyjva9MGEr5orgb4_uGaW6EKMx2ay6AmNFNt8cXKiEF-WUl9Qr93BP3Do5aItf4dDyhMrBYSaMcKeRdrYDtuFqb2MJg2EKxsQ2jNeqCuWxcD-GGVWUwmMKTNSUDcY6QIFqYocIGMNo6Tvywll8CEZ34FjZoUDGSgQtGM92EzZnRAwInlzMiSBE6xr00QZqQmPXbYg1JrOM3wA8_Y6QKOt3Lg1w0hkZcRlCwMur2vwGpMjI5zCmbui4TPPs_gjDq4JiwhxzKgWttMfquvpgOP0kTFtvzYTdO4YIuV8sRZVVf3pCo7OZhGYOTGNO8DBZ67-aCstKzL30f_Xk05_qDTR4OIlRwMl5IlEzlJ5gVh9bqKL8NtbVkBlzb1B4WbXF1zYGnryGnGXQjf35Obw5nhWzoxqkJa9v2jbPbCqVW2E54OgQjybdGFMD2Jb4W1pDumrO-hEtNv7lokz4F03cEF1NXQNl2wmCtCZ1oLoAS9dWeKD1jekKCg0m_zo7F7Ny2NcgOfuqPbZnaqKkpd4-mYNtH16jUVM8AhM9lpoLXIft5pdLBHU2UBB0xfj59e1jg9vIbjSsD5vn8ZHicBjI3e8UZXDC2lxOJ3eK-K9KtIOjPqYspW3qIe8BJC1bYjmdoYk6vNKC_Kvz9JN4IP6cQMFO4BrqQpFTgN0u6kFgG3gjMScqtFVFzEe3H54J6amCBapHqsUyq_HvbMoVHmNwTWWBvEdCrufrYkb9NxVKq3FiIFXV_7M=w1211-h971-s-no-gm?authuser=0"
+              alt="" />
           </div>
           <div class="item5">
-            <p>a</p>
+            <img src="/img/vwgolftrackday.jpg" alt="" />
           </div>
         </div>
       </section>
@@ -100,56 +109,55 @@
         <!-- FALTA DISEÑO -->
         <div id="mainOffer">
           <h2>Oferta especial</h2>
-          <div class="flex">
-            <div class="column bg-placeholder">
+          <div class="other-grid">
+            <div class="bg-placeholder item1">
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
-                alt="placeholder"
-                height="250px"
-              />
+                alt="placeholder" />
             </div>
-            <div class="column bg-placeholder">
-              <h4>Producto</h4>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. In
-                eveniet minus aperiam. Ut,
-              </p>
-              <h5>Lorem ipsum</h5>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex id
-                optio nulla, tempore
-              </p>
-              <table>
-                <thead>
-                  <tr>
-                    <th colspan="2" class="theader">POR MAYOR</th>
-                    <th colspan="2" class="theader">POR MENOR</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td class="original-value">750</td>
-                    <td>600</td>
-                    <td class="original-value">1000</td>
-                    <td>800</td>
-                  </tr>
-                </tbody>
-              </table>
-              <a href="#" class="buyButton">Comprar</a>
+            <div class="bg-placeholder item2">
+              <div class="special-offer">
+                <h4>Producto</h4>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. In
+                  eveniet minus aperiam. Ut,
+                </p>
+                <h5>Lorem ipsum</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex id
+                  optio nulla, tempore
+                </p>
+                <table>
+                  <thead>
+                    <tr>
+                      <th colspan="2" class="theader">POR MAYOR</th>
+                      <th colspan="2" class="theader">POR MENOR</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td class="original-value">750</td>
+                      <td>600</td>
+                      <td class="original-value">1000</td>
+                      <td>800</td>
+                    </tr>
+                  </tbody>
+                </table>
+                <a href="#" class="buyButton">Comprar</a>
+              </div>
             </div>
+            <hr />
           </div>
         </div>
-        <hr />
         <div>
           <h3>Otras ofertas</h3>
-          <div class="flex2">
-            <div id="offer1" class="offerBox">
+          <div class="minigrid">
+            <div id="offer1" class="item1 flexing">
               <div class="column">
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
                   alt="placeholder"
-                  height="100px"
-                />
+                  height="100px" />
               </div>
               <div class="column">
                 <small>20% off</small>
@@ -158,13 +166,12 @@
                 <a href="#" class="buyButton">Comprar</a>
               </div>
             </div>
-            <div id="offer2" class="offerBox">
+            <div id="offer2" class="item2 flexing">
               <div class="column">
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
                   alt="placeholder"
-                  height="100px"
-                />
+                  height="100px" />
               </div>
               <div class="column">
                 <small>20% off</small>
@@ -173,12 +180,12 @@
                 <a href="#" class="buyButton">Comprar</a>
               </div>
             </div>
-            <div id="offer3" class="offerBox">
+            <div id="offer3" class="item3 flexing">
               <div class="column">
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
                   alt="placeholder"
-                />
+                  height="100px" />
               </div>
               <div class="column">
                 <small>20% off</small>
@@ -221,8 +228,7 @@
               name="btxtMessage"
               id="btxtMessage"
               cols="20"
-              rows="10"
-            ></textarea>
+              rows="10"></textarea>
             <a href="#" class="fromButton">Enviar</a>
           </div>
         </form>
