--- a/index.html
+++ b/index.html
@@ -48,30 +48,36 @@
             <h4>Volkswagen Gol Last Edition 2023</h4>
             <hr />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-              sed ad dolor iste voluptates
+              Un clásico latinoamericano que llega a su final, con una versión
+              tan Gol como siempre, el Gol Last Edition, de fabricación
+              limitada.
             </p>
-            <a href="#" class="buyButton">Comprar</a>
+            <a href="#" class="button">Más detalles</a>
           </div>
           <div class="most-sold">
             <img src="./img/vw-golf-2024.webp" alt="Volkswagen Golf 2024" />
             <h4>Volkswagen Golf R 2024</h4>
             <hr />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-              sed ad dolor iste
+              El vehiculo más popular de la firma, un hot hatch capaz de
+              enloquecer tanto a jovenes como a los más experimentados. El Golf
+              se renueva en su versión tope de linea, con su caja DSG y tracción
+              en las 4 ruedas, esta R-Line es el auto ideal para todos.
             </p>
-            <a href="#" class="buyButton">Comprar</a>
+            <a href="#" class="button">Más detalles</a>
           </div>
           <div class="most-sold">
             <img src="./img/vw-arteon.jpg" alt="Volkswagen Arteon R 2020" />
             <h4>Volkswagen Arteon R 2020</h4>
             <hr />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-              sed ad dolor
+              De lujos se disfrutan, y nuestro Arteon no es ninguna excepción.
+              Éste joven sedán llego para romper el mercado. Un toque deportivo
+              en un auto lleno de lujos, el vehiculo ideal para esa mezcla de
+              comfort y lujo con algo de deportividad que tanto nos divierte a
+              los entusiastas.
             </p>
-            <a href="#" class="buyButton">Comprar</a>
+            <a href="#" class="button">Más detalles</a>
           </div>
         </div>
       </section>
@@ -82,26 +88,33 @@
           <div class="item1">
             <img
               src="https://www.wsupercars.com/wallpapers-wide/Volkswagen/2022-Volkswagen-Golf-R-005-1440w.jpg"
-              alt="" />
+              alt="Foto de un Volkswagen Golf R en ruta despoblada"
+              title="Volkswagen Golf R MK7 - WSupercars.com" />
           </div>
           <div class="item2">
             <img
               src="https://lh3.googleusercontent.com/pw/ADCreHc_odY6wdiJXCNhysHN9tSTC0aS70fLTysCQzHlT54gMlrowEuJ0A-HPDO4_mQSAop_UbJbtBe8P0HWngZ7skkW9IH5CB8Ckea_UFN-yTaPOlOha1t7sk2Mq66IbDxxElyWfGNcI6pvUIbydd7fgyCL2g=w544-h971-s-no-gm?authuser=0"
-              alt="Foto del interio de un auto Volkswagen. Vista desde asiento del conductor incluye volante, una calle con arboles y parte del tablero del vehiculo" />
+              alt="Foto del interior de un auto Volkswagen. Vista desde asiento del conductor incluye volante, una calle con arboles y parte del tablero del vehiculo"
+              title="Volkswagen Gol V 2011 - Ganimomu" />
           </div>
           <div class="item3">
             <img
-              src="https://lh3.googleusercontent.com/pw/ADCreHdpXfHT2RJZPsaN5YtbZTFjiyekpKgHjgzpCMJmbGT1W4F5zuoyKJU5TOgQY9kXKowHRRUqvKP4TMSSjoaXYIeY178dCGvVq0U4J7HCGRD5_Ct035tHqm2mZ5yfwdLYHf6JldlRV01fLLmI17ND29Z_CUQWlV2GrIjU773XSIjnZz72H7KSMKRPs9rNvACst9DpmJ4AGbvuA5x-y9DTmoLcCeMckdXlad32Gu6bYm8uLdlmWa-yspaFDkw5PYwcBrR2CTCVd4N6H_77sCfEsRz04Tdslyvx1GacMV40DiIvePyuce-I9bCsdoavUaXWH-Es8-fpVAXmNgcuTjKlopeZF6qWC1jhciMliPXaEgT6i3Am_6Cr9MfN9fo-G0y5Q8R0E-RfVhkeQu0WcVIt4cTpX04ccvPDozBsleImYV5KzBgcouEnfQ45x6rlCtB5Y3igsw4vxROieg81Y5dLh_borcfXpVPO2m5RcF5opaKveBRkxFYdZ6kXFYRGj9dDeAfp2cLnNKQoU7xgKow5JaNMUSEjUNj3qTX_KkjsazKK2OkBDw0M8tjK2ffOhm_sjIjf36qAnwnaltGZaOqNWMeLPeFusGq9oNFvmznALwGrSDHMLNXndztz_Me1qCeavD6dELg14G8YTCzZbfGd1D49SG7jiGeo2NiSWSvmLaQW32qP6EKTri0pwPHK_gK0ClWw9L9ACQEd3aOWMiVHh6rnZOfw1OdR_l5tZPtrcGq3RJ5IKkkWImoUM0R5b-W6tNylJDIdZEg_D_Nt0fr-fccTHmzRP5jEgY-CAuQS8mMy77uJkWb0a4SaORnrm7tYBL3VMOuokNGybtBUVYdkZ-A82JCXDxFvqn3fZ9o-wzo4Czo9B44pMNpP5v7IYm2EQ43JdK2Nx5_nbquXAzEI6yk4eKg=w1295-h971-s-no-gm?authuser=0"
-              alt="" />
+              src="/img/vwgol-frontfalback.jpg"
+              alt="Foto de un Volkswagen Gol, parte frontal y lateral del mismo vehiculo"
+              title="Volkswagen Gol V 2011 - Ganimomu" />
           </div>
           <div class="item4">
             <img
               id="vwgol"
-              src="https://lh3.googleusercontent.com/pw/ADCreHdfmUmQXRgaBVbed1JVioJCk0HafkQcP_XsiDrhyOuyvxGg1ZUV5fOIxOKSA-07JzCiuErMyjKAk0LijXDNQZfB7Y4sZS1dFUYeQBRH1_PWi5gYHvQlsFJEw5BzDbQTYmWqP9x_4seqCjp6CUhAyDSJ2Q0KZqQoKZXc72GF9BTyjva9MGEr5orgb4_uGaW6EKMx2ay6AmNFNt8cXKiEF-WUl9Qr93BP3Do5aItf4dDyhMrBYSaMcKeRdrYDtuFqb2MJg2EKxsQ2jNeqCuWxcD-GGVWUwmMKTNSUDcY6QIFqYocIGMNo6Tvywll8CEZ34FjZoUDGSgQtGM92EzZnRAwInlzMiSBE6xr00QZqQmPXbYg1JrOM3wA8_Y6QKOt3Lg1w0hkZcRlCwMur2vwGpMjI5zCmbui4TPPs_gjDq4JiwhxzKgWttMfquvpgOP0kTFtvzYTdO4YIuV8sRZVVf3pCo7OZhGYOTGNO8DBZ67-aCstKzL30f_Xk05_qDTR4OIlRwMl5IlEzlJ5gVh9bqKL8NtbVkBlzb1B4WbXF1zYGnryGnGXQjf35Obw5nhWzoxqkJa9v2jbPbCqVW2E54OgQjybdGFMD2Jb4W1pDumrO-hEtNv7lokz4F03cEF1NXQNl2wmCtCZ1oLoAS9dWeKD1jekKCg0m_zo7F7Ny2NcgOfuqPbZnaqKkpd4-mYNtH16jUVM8AhM9lpoLXIft5pdLBHU2UBB0xfj59e1jg9vIbjSsD5vn8ZHicBjI3e8UZXDC2lxOJ3eK-K9KtIOjPqYspW3qIe8BJC1bYjmdoYk6vNKC_Kvz9JN4IP6cQMFO4BrqQpFTgN0u6kFgG3gjMScqtFVFzEe3H54J6amCBapHqsUyq_HvbMoVHmNwTWWBvEdCrufrYkb9NxVKq3FiIFXV_7M=w1211-h971-s-no-gm?authuser=0"
-              alt="" />
+              src="/img/vwgo-back-fallback.jpg"
+              alt="Foto de un Volkswagen Gol - Parte trasera del vehiculo"
+              title="Volkswagen Gol V 2011 - Ganimomu" />
           </div>
           <div class="item5">
-            <img src="/img/vwgolftrackday.jpg" alt="" />
+            <img
+              src="/img/vwgolftrackday.jpg"
+              alt="Foto de un Volkswagen Golf en trackday"
+              title="Volkswagen Golf MK7 - Nurburgring.de" />
           </div>
         </div>
       </section>
@@ -110,23 +123,23 @@
         <div id="mainOffer">
           <h2>Oferta especial</h2>
           <div class="other-grid">
-            <div class="bg-placeholder item1">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
-                alt="placeholder" />
+            <div class="item1">
+              <img src="/img/llavero-vw.webp" alt="placeholder" />
             </div>
-            <div class="bg-placeholder item2">
+            <div class="item2">
               <div class="special-offer">
-                <h4>Producto</h4>
+                <span>
+                  <h4>Llavero azul</h4>
+                </span>
+                <span>
+                  <small>20% off</small>
+                </span>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. In
-                  eveniet minus aperiam. Ut,
+                  Llavero metalico azul con el clásico emblema de Volkswagen
+                  para acompañar las llaves de un buen Volkswagen.
                 </p>
-                <h5>Lorem ipsum</h5>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex id
-                  optio nulla, tempore
-                </p>
+                <h5>También disponible en tiendas locales</h5>
+                <p> Ref: VWC.008.285.AZUL </p>
                 <table>
                   <thead>
                     <tr>
@@ -136,60 +149,46 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td class="original-value">750</td>
-                      <td>600</td>
-                      <td class="original-value">1000</td>
-                      <td>800</td>
+                      <td class="original-value">$ 750</td>
+                      <td>$ 600</td>
+                      <td class="original-value">$ 1000</td>
+                      <td>$ 800</td>
                     </tr>
                   </tbody>
                 </table>
                 <a href="#" class="buyButton">Comprar</a>
               </div>
             </div>
-            <hr />
           </div>
+          <hr />
         </div>
-        <div>
+        <div class="special-offers">
           <h3>Otras ofertas</h3>
           <div class="minigrid">
-            <div id="offer1" class="item1 flexing">
-              <div class="column">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
-                  alt="placeholder"
-                  height="100px" />
-              </div>
-              <div class="column">
-                <small>20% off</small>
-                <h4>Producto</h4>
+            <div id="offer1" class="item1 other-grid">
+              <img src="img/multitool-vw.webp" alt="placeholder" />
+              <div>
+                <small class="saleBadge">20% off</small>
+                <h4>Multitool</h4>
                 <p>$1000</p>
                 <a href="#" class="buyButton">Comprar</a>
               </div>
             </div>
-            <div id="offer2" class="item2 flexing">
-              <div class="column">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
-                  alt="placeholder"
-                  height="100px" />
-              </div>
-              <div class="column">
-                <small>20% off</small>
-                <h4>Producto</h4>
+            <div id="offer2" class="item2 other-grid">
+              <img src="img/papelera-vw.webp" alt="placeholder" />
+
+              <div>
+                <small class="saleBadge">20% off</small>
+                <h4>Papelera</h4>
                 <p>$1000</p>
                 <a href="#" class="buyButton">Comprar</a>
               </div>
             </div>
-            <div id="offer3" class="item3 flexing">
-              <div class="column">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
-                  alt="placeholder"
-                  height="100px" />
-              </div>
-              <div class="column">
-                <small>20% off</small>
-                <h4>Producto</h4>
+            <div id="offer3" class="item3 other-grid">
+              <img src="img/mouse-vw.webp" alt="placeholder" />
+              <div class="item2">
+                <small class="saleBadge">20% off</small>
+                <h4>Mouse Beetle</h4>
                 <p>$1000</p>
                 <a href="#" class="buyButton">Comprar</a>
               </div>
