--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </figure>
 
         <nav>
-          <a href="#">Más vendidos</a>
-          <a href="#">Temática</a>
-          <a href="#">Oferta especial</a>
-          <a href="#">Contacto</a>
+          <a href="#our-cars">Nuestras estrellas</a>
+          <a href="#tematica">Nuestra comunidad</a>
+          <a href="#ofertas">Productos</a>
+          <a href="#contacto">Contacto</a>
         </nav>
       </header>
       <section id="main-banner">
@@ -40,7 +40,7 @@
           <p class="main-desc">Hay un Volkswagen para vos</p>
         </div>
       </section>
-      <section id="mostSell">
+      <section id="our-cars">
         <h2>Nuestras estrellas</h2>
         <div id="mas-vendidos">
           <div class="most-sold">
