--- a/index.html
+++ b/index.html
@@ -228,14 +228,25 @@
               id="btxtMessage"
               cols="20"
               rows="10"></textarea>
-            <a href="#" class="fromButton">Enviar</a>
+            <a href="#" class="formButton">Enviar</a>
           </div>
         </form>
       </section>
     </div>
     <div>
       <footer id="footer">
-        <p>Elgato</p>
+        <h3>Volkswagen</h3>
+        <div class="minigrid">
+          <a href="#" class="item1"
+            ><img src="img/icons8-facebook-50.png" alt=""
+          /></a>
+          <a href="#" class="item2"
+            ><img src="img/icons8-instagram-50.png" alt=""
+          /></a>
+          <a href="#" class="item3"
+            ><img src="img/icons8-whatsapp-50.png" alt=""
+          /></a>
+        </div>
       </footer>
     </div>
   </body>
