--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Volkswagen - Das auto</title>
+    <meta
+      name="description"
+      content="Canal de noticias y novedades no oficial de Volkswagen. Contamos con tienda de souvenirs/articulos con temática de VW" />
+    <meta name="author" content="Gabriel Moreno - 222706" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -213,9 +217,9 @@
                   <option value="uy" selected>Uruguay</option>
                 </select>
               </div>
-              <div class="column helppls nopadding">
-                <input type="checkbox" name="chkSubscribe" id="chkSubscribe" />
-                <label for="chkSubscribe" class="btnNews"
+              <div class="column other-grid nopadding">
+                <input type="checkbox" name="chkSubscribe" class="item1" />
+                <label for="chkSubscribe" class="item2"
                   >Quiero recibir novedades</label
                 >
               </div>
@@ -238,13 +242,13 @@
         <h3>Volkswagen</h3>
         <div class="minigrid">
           <a href="#" class="item1"
-            ><img src="img/icons8-facebook-50.png" alt=""
+            ><img src="img/icons8-facebook-50.png" alt="Icono: Facebook"
           /></a>
           <a href="#" class="item2"
-            ><img src="img/icons8-instagram-50.png" alt=""
+            ><img src="img/icons8-instagram-50.png" alt="Icono: Instagram"
           /></a>
           <a href="#" class="item3"
-            ><img src="img/icons8-whatsapp-50.png" alt=""
+            ><img src="img/icons8-whatsapp-50.png" alt="Icono: Whatsapp"
           /></a>
         </div>
       </footer>
