--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
                   <option value="uy" selected>Uruguay</option>
                 </select>
               </div>
-              <div class="column other-grid nopadding">
+              <div class="column nopadding">
                 <input type="checkbox" name="chkSubscribe" class="item1" />
-                <label for="chkSubscribe" class="item2"
+                <label for="chkSubscribe" class="item2 testerr"
                   >Quiero recibir novedades</label
                 >
               </div>
@@ -230,7 +230,7 @@
             <textarea
               name="btxtMessage"
               id="btxtMessage"
-              cols="20"
+              cols="10"
               rows="10"></textarea>
             <a href="#" class="formButton">Enviar</a>
           </div>
