--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Volkswagen - Das auto</title>
     <meta
       name="description"
-      content="Canal de noticias y novedades no oficial de Volkswagen. Contamos con tienda de souvenirs/articulos con temática de VW" />
+      content="Canal de noticias y novedades no oficial de Volkswagen. Contamos con tienda de souvenirs/articulos con temática de VW. Página no responsiva optimizada en display 1920x1080" />
     <meta name="author" content="Gabriel Moreno - 222706" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
