--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Noto+Sans+Display:ital,wght@0,400;0,500;0,600;1,300;1,400;1,500;1,600&family=Outfit:wght@100;200;400;700&family=Playpen+Sans:wght@100;400;700&family=Raleway:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Tilt+Neon&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
@@ -21,7 +21,7 @@
       <header>
         <figure>
           <a href="#">
-            <img src="./img/vwlogo.png" alt="Isotipo Volkswagen" />
+            <img src="img/vwlogo.png" alt="Isotipo Volkswagen" />
           </a>
         </figure>
 
@@ -33,12 +33,6 @@
         </nav>
       </header>
       <section id="main-banner">
-        <!-- PLACEHOLDERS -->
-        <!-- <img
-          src="./img/vw-banner.jpg"
-          alt="placeholder"
-          class="banner"
-        /> -->
         <div class="over-image">
           <h1>Volkswagen</h1>
           <p class="main-desc">Hay un Volkswagen para vos</p>
@@ -48,7 +42,7 @@
         <h2>Nuestras estrellas</h2>
         <div id="mas-vendidos">
           <div class="most-sold">
-            <img src="./img/vw-gol-le.jpg" alt="Volkswagen Gol Last Edition" />
+            <img src="img/vw-gol-le.jpg" alt="Volkswagen Gol Last Edition" />
             <h4>Volkswagen Gol Last Edition 2023</h4>
             <hr />
             <p>
@@ -59,7 +53,7 @@
             <a href="#" class="button">Más detalles</a>
           </div>
           <div class="most-sold">
-            <img src="./img/vw-golf-2024.webp" alt="Volkswagen Golf 2024" />
+            <img src="img/vw-golf-2024.webp" alt="Volkswagen Golf 2024" />
             <h4>Volkswagen Golf R 2024</h4>
             <hr />
             <p>
@@ -71,7 +65,7 @@
             <a href="#" class="button">Más detalles</a>
           </div>
           <div class="most-sold">
-            <img src="./img/vw-arteon.jpg" alt="Volkswagen Arteon R 2020" />
+            <img src="img/vw-arteon.jpg" alt="Volkswagen Arteon R 2020" />
             <h4>Volkswagen Arteon R 2020</h4>
             <hr />
             <p>
@@ -104,20 +98,20 @@
             </div>
             <div class="item3">
               <img
-                src="/img/vwgol-frontfalback.jpg"
+                src="img/vwgol-frontfalback.jpg"
                 alt="Foto de un Volkswagen Gol, parte frontal y lateral del mismo vehiculo"
                 title="Volkswagen Gol V 2011 - Ganimomu" />
             </div>
             <div class="item4">
               <img
                 id="vwgol"
-                src="/img/vwgo-back-fallback.jpg"
+                src="img/vwgo-back-fallback.jpg"
                 alt="Foto de un Volkswagen Gol - Parte trasera del vehiculo"
                 title="Volkswagen Gol V 2011 - Ganimomu" />
             </div>
             <div class="item5">
               <img
-                src="/img/vwgolftrackday.jpg"
+                src="img/vwgolftrackday.jpg"
                 alt="Foto de un Volkswagen Golf en trackday"
                 title="Volkswagen Golf MK7 - Nurburgring.de" />
             </div>
@@ -130,7 +124,7 @@
           <h2>Oferta especial</h2>
           <div class="other-grid">
             <div class="item1">
-              <img src="/img/llavero-vw.webp" alt="placeholder" />
+              <img src="img/llavero-vw.webp" alt="placeholder" />
             </div>
             <div class="item2">
               <div class="special-offer">
